modified submission form

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="container-fluid">
         <h3>Simply know your "Akan Name" by filling out the form below</h3>
+         <div>
         <form action="contactform.php" method="GET">
         <label>Enter Your Name</label>
         <input type="text" id="name" placeholder="Write Your Name">
@@ -25,7 +26,12 @@
         <input type="number" name="month" placeholder="Enter the month"required min="1" max="12">
         <label>Day</label>
         <input type="number" name="day" placeholder="Enter the day" required min="1" max="31">
-     </form>
+        option1:<input type="radio" name="gender" value="male">
+        option2<input type="radio"  name="gender" value="female"
+        checked>
+        <input type="submit" name="submit">
+      </div>
+      </form>
      </div>
     
 
