deleted some items on submission form

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <input type="number" name="month" placeholder="Enter the month"required min="1" max="12">
         <label>Day</label>
         <input type="number" name="day" placeholder="Enter the day" required min="1" max="31">
-        option1:<input type="radio" name="gender" value="male">
-        option2<input type="radio"  name="gender" value="female"
+        male:<input type="radio" name="gender" value="male">
+        female:<input type="radio"  name="gender" value="female"
         checked>
         <input type="submit" name="submit">
       </div>
