modified html file

--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
 
          <div>
         <form action="contactform.php" method="GET">
-        <label>Enter Your Name</label>
-        <input type="text" id="name" placeholder="Write Your Name">
-
         <label>Year</label>
-        <input type="number" name="year" placeholder="Enter the year"required min="1980" max="2019">
+        <input type="number" id="year" placeholder="Enter the year"required min="1980" max="2019">
         <label>Month</label>
 
-        <input type="number" name="month" placeholder="Enter the month"required min="1" max="12">
+        <input type="number" id="month" placeholder="Enter the month"required min="1" max="12">
         <label>Day</label>
 
-        <input type="number" name="day" placeholder="Enter the day" required min="1" max="31">
+        <input type="number" id="day" placeholder="Enter the day" required min="1" max="31">
         male:<input type="radio" name="gender" value="male">
         female:<input type="radio"  name="gender" value="female"
         checked>
