--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container-fluid">
         <h3>Simply know your "Akan Name" by filling out the form below</h3>
 
-         <div>
-        <form action="contactform.php" method="GET">
+         <div class="output">
+        <form>
         <label>Year</label>
         <input type="number" id="year" placeholder="Enter the year"required min="1980" max="2019">
         <label>Month</label>
