declared the functioning arrays

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       </form>
      </div>
-    </div>
+    </div>/home/tony/Moringa-bacp/MoringaProjects/Names/index.html
  <script src="js/script.js"></script>   
 </body>
 </html>
