added the functions

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         male:<input type="radio" name="gender" value="male">
         female:<input type="radio"  name="gender" value="female"
         checked>
-        <input type="submit" name="submit">
+        <button onclick="myFunction()">submit</button>
       </div>
       </form>
      </div>
-    </div>/home/tony/Moringa-bacp/MoringaProjects/Names/index.html
+    </div>
  <script src="js/script.js"></script>   
 </body>
 </html>
