--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 id="year"
                 max="2019"
                 min="1990"
-                placeholder="enter"
+                placeholder="1980"
                 max-length="4"
                 min-length="4"
                 class="form-control">
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <label for="month">Month</label>
                 <input type="text"
-                placeholder="month"
+                placeholder="01"
                 id="month"
                 maxlength="2"
                 min="1"
@@ -49,7 +49,7 @@
                 <label for="day">Day</label>
                 <input type="text"
                 id="day"
-                placeholder="day"
+                placeholder="05"
                 min="1"
                 max="31"
                 min-length="1"
