--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 				  </div>
                   </div>
             <button type="submit" onclick="getName()" onsubmit="event.preventDefault()" class="btn btn-outline-primary">submit</button>
+            <button type="Reset" onclick="getName()" onsubmit="event.preventDefault()" class="btn btn-outline-primary">Reset</button>
            </form>
            </div>
            </div>
