customized my styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron" id="top">
     <h1>Akan Naming Culture</h1> 
     <p class="pp">Akan Name come from a traditional naming system for Ghana.A child's name is determined by factors</br>surrounding his or her birth.For example,the day of their birth or the manner in which</br>they were born may determine which name they get irrespective of their gender</p>
     </div>
