mofied html file and css file

--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
            </div>
            </div>
           </div>
+          <footer>
+            <div class="footer">
+            <h6>@bettydesigns</h6>
+            </div>
+          </footer>
 <script src="./js/app.js"></script>
 </body>
 </html>
